--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<p>Hello there! please register by <a href="com.google.android.apps.gsa.gal://oauth2redirect">clicking here</a></p>
+<p>Hello there! please register by <a href="launch://spoofy.com">clicking here</a></p>
