--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<p>Hello there! please register by <a href="launch://spoofy.com">clicking here</a></p>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Security UI Spoofing</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
+    </head>  
+    <body>
+
+      <p>Spoof full screen with app pin prompt ui <a href="launch://spoofy.com" onclick="showFullScreen();">clicking here</a></p>
+
+
+      <script>
+
+        function showFullScreen(){
+        document.documentElement.requestFullscreen();
+        }
+      </script>
+      
+    </body>
+  </body>
+</html>
