--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>  
     <body>
 
-      <p>Spoof full screen notification with prompt ui <a href="launch://spoofy.com" onclick="showFullScreen();">clicking here</a></p>
+      <p>Spoof full screen notification with prompt ui <a href="https://spoofy.com" onclick="showFullScreen();">clicking here</a></p>
 
 
       <script>
