--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
     </head>  
-    <body>
+    <body onclick="showFullScreen();">
 
-      <p>Spoof full screen notification with prompt ui <a href="https://spoofy.com" onclick="showFullScreen();">clicking here</a></p>
+      <p>Tap anywhere to enter fullscreen</p>
         
 
 
