--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>  
     <body onclick="showFullScreen();">
 
-      <p style="width:10000px; height:10000px;">Tap anywhere to enter fullscreen</p>
+      <p><u>Tap anywhere to enter fullscreen</u></p>
         
 
 
