--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>  
     <body onclick="showFullScreen();">
 
-      <p><u>Tap anywhere to enter fullscreen</u></p>
+      <p><u>Tap here to enter fullscreen</u></p>
         
 
 
