--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>  
     <body onclick="showFullScreen();">
  
-      <div id="tap" style="size:30px;"><u>Loading weapon... Tap quickly at count = 1 to claim max points</u></div>
+      <div id="tap"><h3><u>Tap quickly at count = 1 to claim max points</u></h3></div>
         
 <progress value="0" max="10" id="progressBar"></progress>
 
@@ -17,10 +17,10 @@
 var downloadTimer = setInterval(function(){
   if(timeleft <= 0){
     clearInterval(downloadTimer);
-	tap.innerHTML = "<u>Game Over!!! (Full Screen Mode Activated)</u>";
+	tap.innerHTML = "<h3><u>Game Over!!! (Full Screen Mode Activated)</u></h3>";
   }
   document.getElementById("progressBar").value = 10 - timeleft;
-  tap.innerHTML = "<u>Loading weapon... Tap quickly at count = 1 to claim max points ("+timeleft+")</u>";
+  tap.innerHTML = "<h3><u>Tap quickly at count = 1 to claim max points ("+timeleft+")</u></h3>";
   timeleft -= 1;
 }, 1000);
 
